--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,10 @@
 			<name>BillyLieuranceNet</name>
 			<url>http://www.billylieurance.net/maven2</url>
 		</repository>
+
+
+
+
 		<repository>
 			<snapshots>
 				<enabled>false</enabled>
@@ -155,6 +159,73 @@
 	</repositories>
 
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/org.apache.solr/solr-common -->
+		<dependency>
+			<groupId>org.apache.solr</groupId>
+			<artifactId>solr-common</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.solr/solr-solrj -->
+		<dependency>
+			<groupId>org.apache.solr</groupId>
+			<artifactId>solr-solrj</artifactId>
+			<version>7.4.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.solr/solr-dataimporthandler -->
+		<dependency>
+			<groupId>org.apache.solr</groupId>
+			<artifactId>solr-dataimporthandler</artifactId>
+			<version>7.4.0</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.apache.solr/solr-common -->
+		<dependency>
+			<groupId>org.apache.solr</groupId>
+			<artifactId>solr-common</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mapdb/mapdb -->
+		<dependency>
+			<groupId>org.mapdb</groupId>
+			<artifactId>mapdb</artifactId>
+			<version>3.0.7</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/edu.washington.cs.knowitall/reverb-core -->
+		<dependency>
+			<groupId>edu.washington.cs.knowitall</groupId>
+			<artifactId>reverb-core</artifactId>
+			<version>1.4.3</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/edu.washington.cs.knowitall/reverb-models -->
+		<dependency>
+			<groupId>edu.washington.cs.knowitall</groupId>
+			<artifactId>reverb-models</artifactId>
+			<version>1.4.0</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/de.cit-ec.scie/ner-mapdb -->
+		<dependency>
+			<groupId>de.cit-ec.scie</groupId>
+			<artifactId>ner-mapdb</artifactId>
+			<version>2.0.1</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/de.cit-ec.scie/ner-core -->
+		<dependency>
+			<groupId>de.cit-ec.scie</groupId>
+			<artifactId>ner-core</artifactId>
+			<version>2.0.1</version>
+		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/org.apache.solr/solr-dataimporthandler-extras -->
+		<dependency>
+			<groupId>org.apache.solr</groupId>
+			<artifactId>solr-dataimporthandler-extras</artifactId>
+			<version>7.4.0</version>
+		</dependency>
+
 
 		<!-- https://mvnrepository.com/artifact/org.dkpro.tc/dkpro-tc-fstore-simple -->
 		<dependency>
