--- a/resources/ward.properties
+++ b/resources/ward.properties
@@ -9,8 +9,8 @@ mysqlpassword=cloudera
 solrhost=410-1
 solruser=cloudera
 solrpassword=cloudera
-mysqlhost=localhost
+mysqlhost=asrock
 mysqluser=root
 mysqlpassword=cloudera
 table=gutenberg
-createtable = CREATE TABLE gutenberg ( int idBook;	String title;	String author ;	String date;	String ReleaseDate;	String text ;	String extra ;	String filename ;	String path;	String EtextNumber ;	String source ;	String name ;	boolean verified = false;);
+createtable = CREATE TABLE IF NOT EXISTS gutenberg (idBook INT,  title  VARCHAR(254), author  VARCHAR(254), date  VARCHAR(254), ReleaseDate  VARCHAR(254), text TEXT, extra  VARCHAR(254), filename VARCHAR(254), path VARCHAR(254), EtextNumber VARCHAR(254), source  VARCHAR(254), name  VARCHAR(254), verified  BOOLEAN) 
