Update to develop on linux

--- a/resources/ward.properties
+++ b/resources/ward.properties
@@ -6,7 +6,7 @@ filetype=txt
 mysqlhost=asrock
 mysqluser=root
 mysqlpassword=cloudera
-solrhost=410-1
+solrhost=asrock
 solruser=cloudera
 solrpassword=cloudera
 mysqlhost=asrock
