adjusting for MapDb

--- a/resources/ward.properties
+++ b/resources/ward.properties
@@ -13,4 +13,5 @@ mysqlhost=asrock
 mysqluser=root
 mysqlpassword=cloudera
 table=gutenberg
+DBLocation=D:/mapdb/gutenberg
 createtable = CREATE TABLE IF NOT EXISTS gutenberg (idBook INT,  title  VARCHAR(254), author  VARCHAR(254), date  VARCHAR(254), ReleaseDate  VARCHAR(254), text TEXT, extra  VARCHAR(254), filename VARCHAR(254), path VARCHAR(254), EtextNumber VARCHAR(254), source  VARCHAR(254), name  VARCHAR(254), verified  BOOLEAN) 
