--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,12 @@
 	</repositories>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-text</artifactId>
+			<version>1.3</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/uk.gov.dstl.baleen/baleen-runner -->
 		<dependency>
 			<groupId>uk.gov.dstl.baleen</groupId>
