--- a/pom.xml
+++ b/pom.xml
@@ -5,15 +5,16 @@
 	<groupId>gutenberglive.net.myexperiments</groupId>
 	<artifactId>gutenberglive</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+
 	<name>gutenberglive</name>
 
 	<properties>
 
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
 		<maven.surefire.heap>512m</maven.surefire.heap>
 		<maven.surefire.argLine />
-		<maven.surefire.java9 />
+		<maven.surefire.java11 />
 	</properties>
 
 	<distributionManagement>
@@ -159,6 +160,7 @@
 	</repositories>
 
 	<dependencies>
+
 		<!-- https://mvnrepository.com/artifact/uk.gov.dstl.baleen/baleen-runner -->
 		<dependency>
 			<groupId>uk.gov.dstl.baleen</groupId>
@@ -189,6 +191,7 @@
 			<artifactId>baleen-annotators</artifactId>
 			<version>2.4.0</version>
 		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/uk.gov.dstl.baleen/baleen-consumers -->
 		<dependency>
 			<groupId>uk.gov.dstl.baleen</groupId>
@@ -399,6 +402,34 @@
 			<artifactId>opennlp-tools</artifactId>
 			<version>1.8.2</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.23.1-GA</version>
+		</dependency>
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib-nodep</artifactId>
+			<version>3.2.7</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.4.0-b180725.0427</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<version>2.4.0-b180725.0644</version>
+		</dependency>
+
+
 	</dependencies>
 
 
@@ -408,7 +439,17 @@
 	<build>
 		<finalName>UIMATest</finalName>
 		<pluginManagement>
+
+
 			<plugins>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>versions-maven-plugin</artifactId>
+					<version>2.5</version>
+					<configuration>
+						<generateBackupPoms>false</generateBackupPoms>
+					</configuration>
+				</plugin>
 				<plugin>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<configuration>
@@ -418,6 +459,15 @@
 						</compilerArgs>
 					</configuration>
 				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.8.0</version>
+					<configuration>
+						<release>11</release>
+					</configuration>
+				</plugin>
+
 				<plugin>
 					<groupId>org.apache.rat</groupId>
 					<artifactId>apache-rat-plugin</artifactId>
@@ -432,6 +482,29 @@
 						</execution>
 					</executions>
 				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.22.0</version>
+					<configuration>
+						<argLine>
+							--illegal-access=permit
+						</argLine>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-failsafe-plugin</artifactId>
+					<version>2.22.0</version>
+					<configuration>
+						<argLine>
+							--illegal-access=permit
+						</argLine>
+					</configuration>
+				</plugin>
+
+
 			</plugins>
 		</pluginManagement>
 		<sourceDirectory>src</sourceDirectory>
