move to windows

--- a/resources/ward.properties
+++ b/resources/ward.properties
@@ -7,7 +7,7 @@ filetype=txt
 mysqlhost=610-1
 mysqluser=root
 mysqlpassword=cloudera
-solrhost=asrock
+solrhost=localhost
 solruser=cloudera
 solrpassword=cloudera
 mysqlhost=610-1
